--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/omkardedge011/directus-extension-collection-selector.git"
+		"url": "git+https://github.com/omkardedge011/directus-extension-collection-selector.git"
 	},
 	"bugs": {
 		"url": "https://github.com/omkardedge011/directus-extension-collection-selector/issues"
